--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -19,8 +19,10 @@
     <h1>Olá, mundo!</h1>
     <p>Já me livrei da maldição</p>
     <script>
-        var nome = prompt('Qual é seu nome?')
-        alert('É um grande prazer te conhecer ' + nome + '!') // concatenação
+        var n1 = Number(prompt('Digite um número: '))
+        var n2 = Number(prompt('Digite outro número: '))
+        var s = n1 + n2
+        alert(`a soma entre ${n1} e ${n2} é igual a ${s}.`)
     </script>
 </body>
 </html>
