--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -17,7 +17,7 @@
         var nome = prompt('Qual é seu nome?')
         document.write(`Olá, <strong>${nome}</strong>! Seu nome tem ${nome.length} letras <br>`)
         document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()} <br>`)
-        document.write(`Seu nome em maiúsculas é ${nome.toLowerCase()}`)
+        document.write(`Seu nome em minúsculas é ${nome.toLowerCase()}`)
     </script>
 </body>
 </html>
