--- a/aula12ex/ex015/modelo.html
+++ b/aula12ex/ex015/modelo.html
@@ -3,22 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modelo de Exercício</title>
+    <title>Hora do dia</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
-        <h1>Título</h1>
+        <h1>Hora do dia</h1>
     </header>
     <Section>
-        <div>
-            Testando...
+        <div id="msg">
+            Aqui vai aparecer a mensagem...
         </div>
-        <div>
-            Olá
-        </div>
-        <div>
-
+        <div id="foto">
+            <img id="imagem" style="border-radius: 50%" width="250" height="250"  src="img/fotomanha.jpg" alt="">
         </div>
     </Section>
     <footer>
