--- a/aula14ex/ex016/modelo.html
+++ b/aula14ex/ex016/modelo.html
@@ -11,15 +11,11 @@
         <h1>Título</h1>
     </header>
     <Section>
-        <div>
-            Testando...
-        </div>
-        <div>
-            Olá
-        </div>
-        <div>
-
-        </div>
+        <p>Início <input type="number" name="inicio" id="inicio"></p>
+        <p>Fim <input type="number" name="fim" id="fim"></p>
+        <p>Passo <input type="number" name="passo" id="passo"></p>
+        <button onclick="counting()">Contar</button>
+        <p id="res">Preparando a contagem...</p>
     </Section>
     <footer>
         <p>&copy; CursoemVideo</p>
