--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -11,15 +11,8 @@
         <h1>Título</h1>
     </header>
     <Section>
-        <div>
-            Testando...
-        </div>
-        <div>
-            Olá
-        </div>
-        <div>
-
-        </div>
+        Taboada <input type="number" name="taboada" id="taboada"> <button onclick="counting()">Gerar Taboada</button>
+        <p id="res"></p>
     </Section>
     <footer>
         <p>&copy; CursoemVideo</p>
