--- a/ex-classes/index.html
+++ b/ex-classes/index.html
@@ -31,9 +31,16 @@
                 <input type="radio" name="f_tipo" id="f_tipoMilitar" value="m">Militar
             </div>
             <div class="radio">
-                <input type="radio" name="f_tipo" id="f_tipoNormal" value="m">Normal
+                <input type="radio" name="f_tipo" id="f_tipoNormal" value="n">Normal
+            </div>
+            <div class="campoForm">
+                <button id="btn_carro">Adicionar</button>
             </div>
         </div>
     </div>
+    <div id="carros">
+        <!-- <div class="carro">Golf</div> -->
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
